[project]
name = "netbox-device-module-type-importer"
version = "0.0.1"
description = "A Netbox plugin for importing device and module types from the device type library."
authors = [
    {name="Andy Wilson", email="andy@shady.org"},
]
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "devicetype", "moduletype", "importer", "netbox-device-module-type-importer"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "aiohttp>=3.9.0",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/andy-shady-org/netbox-device-module-type-importer"
Documentation = "https://github.com/andy-shady-org/netbox-device-module-type-importer/blob/main/README.md"
Repository = "https://github.com/andy-shady-org/netbox-device-module-type-importer"
Issues = "https://github.com/andy-shady-org/netbox-device-module-type-importer/issues"

[build-system]
requires = ['setuptools >= 64']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
exclude = ["examples*", "media*", "*.tests*"]

[tool.setuptools.package-data]
"netbox_device_module_type_importer" = ["templates/**/*.html"]
